# libmacaroons

./: CMakeLists.txt  README  build_test.sh  macaroon-test.c  package.xml
include/: config.h  macaroons.hpp
include/macaroons/: macaroons.h  macaroons.hpp
src/: config.h  macaroons.c  macaroons.cpp  v1.c
test_cpp/: test.cpp  testExamples.cpp
